<resources>
    <string name="app_name">NoteApplication</string>
    <string name="discover_btn">Discover the platform</string>
    <string name="my_notes">My Notes</string>
    <string name="tv_login">You have an account ? Log-in</string>
    <string name="tv_skip">Skip</string>
    <string name="unb_text_step1">Find projects from companies everywhere in the word</string>
    <string name="unb_text_step2">Make money while working on awesome projects</string>
    <string name="unb_text_step3">Chat with others freelancers and develop your network</string>
    <string name="unb_text_step4">Work hard and level up!</string>
    <string name="unb_text_step5">Enjoy your progress!</string>
    <string name="log_in">Log-in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign-up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="tv_return_to_sign_up">Return to Sign-up</string>
    <string name="obligatory_field">Обязательное поле!</string>
    <string name="error_name">Ошибка ввода</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="add_note">Add note</string>
    <string name="add_new">Add new</string>
    <string name="logout">Logout</string>
    <string name="date">Date</string>
    <string name="alert_fill_fields">Заполните все поля!</string>
    <string name="select_date">Выберите дату</string>
    <string name="note_add">Заметка добавлена</string>
    <string name="attentionon">Внимание!!!</string>
    <string name="is_delete">Вы действительно хотите удалить данную запись?</string>
    <string name="is_all_delete">Вы действительно хотите удалить все заметки?</string>
    <string name="is_profile_delete">Вы действительно хотите удалить профиль (все заметки будут удалены)?</string>
    <string name="is_exit">Вы действительно хотите выйти?</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="ok">OK</string>
    <string name="profile">Profile</string>
    <string name="all_notes">All Notes</string>
    <string name="delete_profile">Delete profile</string>
    <string name="delete_all_notes">Delete all notes</string>
    <string name="search">Search</string>
    <string name="fill_fields">Заполните все поля!</string>
    <string name="wrong_password">Неверный пароль!!!</string>
    <string name="user_not_found">Пользователь не найден!</string>
    <string name="exit">Выйти</string>
    <string name="description">Description</string>
</resources>