<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        style="@style/DashboardHead"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/d_16dp">

        <TextView
            android:id="@+id/tv_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="@dimen/d_20sp"
            android:layout_marginStart="@dimen/d_16dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_delete_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginEnd="@dimen/d_16dp"
            android:textColor="@color/black"
            android:text="@string/delete_profile"
            android:gravity="center"
            android:background="@color/et_background_color"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/d_16dp">

        <TextView
            android:id="@+id/tv_notes_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="@dimen/d_20sp"
            android:layout_marginStart="@dimen/d_16dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_delete_all_notes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginEnd="@dimen/d_16dp"
            android:text="@string/delete_all_notes"
            android:gravity="center"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/d_16dp"
        android:textStyle="bold"
        android:textSize="@dimen/d_20sp"
        android:textColor="@color/black"
        android:text="@string/logout"/>


    
</LinearLayout>